fixed sidebar height on mobile v3

--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -24,7 +24,7 @@
     width: 100vw;
     height: 35vh;
     flex-basis: auto;
-    height: calc(var(--vh, 1vh) * 35);
+    height: calc(var(--vh, 1vh) * 40);
     padding: 2rem calc((100vw - 41.6rem) / 2) 2.5rem;
   }
 }
